Fix  z-index on menu

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,14 +1,12 @@
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   min-height: 100%;
 }
 
 *,
 *::after,
 *::before {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 h1,
@@ -32,5 +30,4 @@ img {
 a {
   text-decoration: none;
   color: currentColor;
-}
-/*# sourceMappingURL=normalize.css.map */
+}/*# sourceMappingURL=normalize.css.map */
